[gd_scene load_steps=31 format=3 uid="uid://bbo63hpxfc223"]

[ext_resource type="ArrayMesh" uid="uid://bilqk6dfuy2qr" path="res://cupola_floor.obj" id="1_i3c1o"]
[ext_resource type="Script" path="res://space_near.gd" id="1_w6myo"]
[ext_resource type="ArrayMesh" uid="uid://w00fut87yk5n" path="res://cupola_roof.obj" id="2_dedv8"]
[ext_resource type="PackedScene" uid="uid://duornhgv4vumt" path="res://goesnet_input.tscn" id="3_kgkbh"]
[ext_resource type="PackedScene" uid="uid://dbk1dflqr6g2t" path="res://vehicle.glb" id="3_u5gxh"]
[ext_resource type="PackedScene" uid="uid://b0ek4j6agviys" path="res://goesnet_output.tscn" id="4_ht0jc"]
[ext_resource type="PackedScene" uid="uid://j2m02rcgoy04" path="res://sd_screen.tscn" id="6_6tqdb"]
[ext_resource type="Texture2D" uid="uid://dc4ftjab6wy1l" path="res://assets/landingzone_selector_overlay.png" id="7_b1gla"]
[ext_resource type="Script" path="res://PlayerCharacterController.gd" id="7_uxqhh"]
[ext_resource type="Script" path="res://SD_3dScreen.gd" id="8_4bukw"]
[ext_resource type="Script" path="res://goesnet_screen.gd" id="9_p1dd4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hty7a"]
blend_mode = 1
cull_mode = 2
shading_mode = 2
albedo_color = Color(1, 0.992157, 0.733333, 1)
roughness = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_s3h55"]
height = 0.125
radius = 17.295

[sub_resource type="ViewportTexture" id="ViewportTexture_u8yx7"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pvr2n"]
resource_local_to_scene = true
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_u8yx7")
texture_filter = 0
disable_receive_shadows = true

[sub_resource type="QuadMesh" id="QuadMesh_i3ms5"]
size = Vector2(10, 0.45)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_mvi76"]
points = PackedVector3Array(5, 0.225, 0, 5, -0.225, 0, -5, 0.225, 0, -5, -0.225, 0)

[sub_resource type="PlaneMesh" id="PlaneMesh_myfsh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_h58dm"]
size = Vector3(2.5, 4, 2.5)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_inhwv"]
plane = Plane(0, 0, -10, 0)

[sub_resource type="ViewportTexture" id="ViewportTexture_gfhmm"]
viewport_path = NodePath("GOESNETInputViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aevk4"]
resource_local_to_scene = true
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_gfhmm")
texture_filter = 0
disable_receive_shadows = true

[sub_resource type="QuadMesh" id="QuadMesh_lxy74"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_42rbu"]
points = PackedVector3Array(0.5, 0.5, 0, 0.5, -0.5, 0, -0.5, 0.5, 0, -0.5, -0.5, 0)

[sub_resource type="ViewportTexture" id="ViewportTexture_egr7c"]
viewport_path = NodePath("GOESNETOutputViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o2x2a"]
resource_local_to_scene = true
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_egr7c")
texture_filter = 0
disable_receive_shadows = true

[sub_resource type="QuadMesh" id="QuadMesh_a6pu8"]

[sub_resource type="Environment" id="Environment_jxpqy"]
ambient_light_source = 1
ambient_light_color = Color(0.729412, 0.745098, 1, 1)
ambient_light_energy = 0.01
sdfgi_use_occlusion = true
sdfgi_read_sky_light = false
sdfgi_bounce_feedback = 1.99
sdfgi_cascades = 8
sdfgi_max_distance = 3276.8
sdfgi_energy = 3.045

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0yy18"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mdjbl"]

[node name="SpaceNear" type="Node3D"]
script = ExtResource("1_w6myo")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
own_world_3d = true
transparent_bg = true
size = Vector2i(4000, 180)
render_target_update_mode = 4

[node name="SDScreen" parent="SubViewport" instance=ExtResource("6_6tqdb")]
unique_name_in_owner = true

[node name="GOESNETInputViewport" type="SubViewport" parent="."]
disable_3d = true
own_world_3d = true
transparent_bg = true
size = Vector2i(800, 800)
size_2d_override = Vector2i(800, 800)
render_target_update_mode = 4

[node name="GOESNetInputScreen" parent="GOESNETInputViewport" node_paths=PackedStringArray("goesnetOutputScreen") instance=ExtResource("3_kgkbh")]
unique_name_in_owner = true
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
goesnetOutputScreen = NodePath("../../GOESNETOutputViewport/GOESNetOutputScreen")

[node name="GOESNETOutputViewport" type="SubViewport" parent="."]
disable_3d = true
own_world_3d = true
transparent_bg = true
size = Vector2i(800, 800)
size_2d_override = Vector2i(800, 800)
render_target_update_mode = 4

[node name="GOESNetOutputScreen" parent="GOESNETOutputViewport" instance=ExtResource("4_ht0jc")]
unique_name_in_owner = true
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0

[node name="StardrifterParent" type="Node3D" parent="."]

[node name="cupolaFloor" type="MeshInstance3D" parent="StardrifterParent"]
transform = Transform3D(0.335, 0, 0, 0, 0.335, 0, 0, 0, 0.335, 0, 0, 0)
layers = 2
material_override = SubResource("StandardMaterial3D_hty7a")
transparency = 0.4
mesh = ExtResource("1_i3c1o")
skeleton = NodePath("../../..")

[node name="StaticBody3D" type="StaticBody3D" parent="StardrifterParent/cupolaFloor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StardrifterParent/cupolaFloor/StaticBody3D"]
shape = SubResource("CylinderShape3D_s3h55")

[node name="cupolaRoof" type="MeshInstance3D" parent="StardrifterParent"]
transform = Transform3D(0.341021, 0, 0, 0, -0.33, 0, 0, 0, 0.315306, 0.20256, 1.80988, 0.0934858)
layers = 2
material_override = SubResource("StandardMaterial3D_hty7a")
transparency = 0.4
mesh = ExtResource("2_dedv8")
skeleton = NodePath("../cupolaFloor")

[node name="vehicle" parent="StardrifterParent" instance=ExtResource("3_u5gxh")]
unique_name_in_owner = true
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)

[node name="3dScreen" type="MeshInstance3D" parent="StardrifterParent" node_paths=PackedStringArray("viewport", "sdscreen", "camera")]
transform = Transform3D(-1.6, 0, -2.41593e-07, 0, 1.6, 0, 2.41593e-07, 0, -1.6, -0.0503712, 1.75311, 10.4565)
material_override = SubResource("StandardMaterial3D_pvr2n")
mesh = SubResource("QuadMesh_i3ms5")
skeleton = NodePath("../..")
script = ExtResource("8_4bukw")
viewport = NodePath("../../SubViewport")
sdscreen = NodePath("../../SubViewport/SDScreen")
camera = NodePath("../../PlayerCharacterController/CollisionShape3D/camera")

[node name="Area3D" type="Area3D" parent="StardrifterParent/3dScreen"]
collision_layer = 128
collision_mask = 128
input_capture_on_drag = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="StardrifterParent/3dScreen/Area3D"]
shape = SubResource("ConvexPolygonShape3D_mvi76")

[node name="InternalLightMain" type="OmniLight3D" parent="StardrifterParent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.2609, 2.93544, 9.74507)
light_color = Color(0.556863, 0.764706, 1, 1)
light_cull_mask = 4293918722
omni_range = 139.288

[node name="InternalLightExtra1" type="OmniLight3D" parent="StardrifterParent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0640647, 22.9539, -0.0494409)
light_color = Color(0.556863, 0.764706, 1, 1)
light_energy = 0.225
light_specular = 0.0
light_cull_mask = 4293918722
omni_range = 139.288

[node name="InternalLightExtra2" type="OmniLight3D" parent="StardrifterParent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0640647, -7.73842, -0.0494409)
light_color = Color(0.556863, 0.764706, 1, 1)
light_energy = 0.15
light_specular = 0.0
light_cull_mask = 4293918722
omni_range = 139.288

[node name="DeploymentSelectionScreen" type="MeshInstance3D" parent="StardrifterParent"]
transform = Transform3D(-4.37114e-08, 1, 0, 4.37114e-08, 1.91069e-15, -1, -1, -4.37114e-08, -4.37114e-08, -11.8607, 1.83244, -2.24163)
mesh = SubResource("PlaneMesh_myfsh")

[node name="Area3D" type="Area3D" parent="StardrifterParent/DeploymentSelectionScreen"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StardrifterParent/DeploymentSelectionScreen/Area3D"]
transform = Transform3D(1, -3.55271e-15, -3.55271e-15, 3.55271e-15, 1, 4.23516e-22, 3.55271e-15, -4.23516e-22, 1, -5.48363e-06, 1.97245, 0)
shape = SubResource("BoxShape3D_h58dm")

[node name="Decal" type="Decal" parent="StardrifterParent/DeploymentSelectionScreen"]
texture_albedo = ExtResource("7_b1gla")

[node name="Node3D" type="Node3D" parent="StardrifterParent"]

[node name="StaticBody3D" type="StaticBody3D" parent="StardrifterParent/Node3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StardrifterParent/Node3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10.6225)
shape = SubResource("WorldBoundaryShape3D_inhwv")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StardrifterParent/Node3D/StaticBody3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -10.7256)
shape = SubResource("WorldBoundaryShape3D_inhwv")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="StardrifterParent/Node3D/StaticBody3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 11.8961, 0, -0.00408268)
shape = SubResource("WorldBoundaryShape3D_inhwv")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="StardrifterParent/Node3D/StaticBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -12.0555, 0, -0.305247)
shape = SubResource("WorldBoundaryShape3D_inhwv")

[node name="GOESNetInputScreen" type="MeshInstance3D" parent="StardrifterParent"]
transform = Transform3D(-4.37114e-08, 1, 0, 4.37114e-08, 1.91069e-15, -1, -1, -4.37114e-08, -4.37114e-08, -11.8607, 1.83244, 3.00469)
mesh = SubResource("PlaneMesh_myfsh")

[node name="GOESNetScreen" type="MeshInstance3D" parent="StardrifterParent/GOESNetInputScreen" node_paths=PackedStringArray("viewport", "sdscreen", "camera", "playercharacter")]
transform = Transform3D(1.6, 0, 0, 0, -6.99382e-08, 1.6, 0, -1.6, -6.99382e-08, -1.66893e-06, 0.00521755, 0)
material_override = SubResource("StandardMaterial3D_aevk4")
mesh = SubResource("QuadMesh_lxy74")
script = ExtResource("9_p1dd4")
viewport = NodePath("../../../GOESNETInputViewport")
sdscreen = NodePath("../../../GOESNETInputViewport/GOESNetInputScreen")
camera = NodePath("../../../PlayerCharacterController/CollisionShape3D/camera")
playercharacter = NodePath("../../../PlayerCharacterController")

[node name="Area3D" type="Area3D" parent="StardrifterParent/GOESNetInputScreen/GOESNetScreen"]
transform = Transform3D(1, -7.10543e-15, 7.10543e-15, 7.10543e-15, 1, 1.64203e-15, -7.10543e-15, 1.64203e-15, 1, 0, 0, 0)
collision_layer = 128
collision_mask = 128
input_capture_on_drag = true

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StardrifterParent/GOESNetInputScreen/GOESNetScreen/Area3D"]
transform = Transform3D(1, -7.10543e-15, 7.10543e-15, 7.10543e-15, 1, 1.64203e-15, -7.10543e-15, 1.64203e-15, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_42rbu")

[node name="GOESNetOutputScreen" type="MeshInstance3D" parent="StardrifterParent"]
transform = Transform3D(-4.37114e-08, 1, 0, 4.37114e-08, 1.91069e-15, -1, -1, -4.37114e-08, -4.37114e-08, -11.8607, 1.83244, 1.10391)
mesh = SubResource("PlaneMesh_myfsh")

[node name="GOESNetScreen" type="MeshInstance3D" parent="StardrifterParent/GOESNetOutputScreen" node_paths=PackedStringArray("viewport", "sdscreen", "camera", "playercharacter")]
transform = Transform3D(1.6, 0, 0, 0, -6.99382e-08, 1.6, 0, -1.6, -6.99382e-08, -1.19209e-06, 0.0111179, 0)
material_override = SubResource("StandardMaterial3D_o2x2a")
mesh = SubResource("QuadMesh_a6pu8")
script = ExtResource("9_p1dd4")
viewport = NodePath("../../../GOESNETOutputViewport")
sdscreen = NodePath("../../../GOESNETOutputViewport/GOESNetOutputScreen")
camera = NodePath("../../../PlayerCharacterController/CollisionShape3D/camera")
playercharacter = NodePath("../../../PlayerCharacterController")

[node name="Area3D" type="Area3D" parent="StardrifterParent/GOESNetOutputScreen/GOESNetScreen"]
transform = Transform3D(1, -7.10543e-15, 7.10543e-15, 7.10543e-15, 1, 1.64203e-15, -7.10543e-15, 1.64203e-15, 1, 0, 0, 0)
collision_layer = 128
collision_mask = 128
input_capture_on_drag = true

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StardrifterParent/GOESNetOutputScreen/GOESNetScreen/Area3D"]
transform = Transform3D(1, -7.10543e-15, 7.10543e-15, 7.10543e-15, 1, 1.64203e-15, -7.10543e-15, 1.64203e-15, 1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_42rbu")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jxpqy")

[node name="PlayerCharacterController" type="CharacterBody3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.70675, 0)
floor_stop_on_slope = false
script = ExtResource("7_uxqhh")
register_as_global_camera = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerCharacterController"]
shape = SubResource("CapsuleShape3D_0yy18")

[node name="camera" type="Camera3D" parent="PlayerCharacterController/CollisionShape3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)

[node name="Area3D" type="Area3D" parent="PlayerCharacterController"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerCharacterController/Area3D"]
shape = SubResource("BoxShape3D_mdjbl")

[node name="SolarSystemParentStarLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02773, 0)
light_color = Color(1, 0.0235294, 0, 1)
directional_shadow_mode = 0
sky_mode = 1

[node name="DebuggingTools" type="CanvasLayer" parent="."]
visible = false

[node name="PlanetSurfaceTexture" type="TextureRect" parent="DebuggingTools"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -20.0
offset_right = 140.0
offset_bottom = 20.0
grow_vertical = 2

[node name="PaletteImage" type="TextureRect" parent="DebuggingTools"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 99.0
offset_top = 106.0
offset_right = 139.0
offset_bottom = 146.0
grow_vertical = 2

[node name="Label" type="Label" parent="DebuggingTools"]
offset_left = 58.0
offset_top = 445.0
offset_right = 612.0
offset_bottom = 468.0
text = "Note: textures shown here are only updated when toggling debug tools!"
